# libafl_practice

./: Cargo.toml
fuzzing101_ex1/: .gitignore  Cargo.toml  Makefile.toml  README.md
fuzzing101_ex1/afl_crashes/default/: cmdline  fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
fuzzing101_ex1/afl_crashes/default/crashes/: README.txt  id:000000,sig:11,src:001217,time:187438,execs:176290,op:havoc,rep:16  id:000001,sig:11,src:001868,time:858102,execs:746312,op:havoc,rep:16
fuzzing101_ex1/afl_crashes/default/hangs/: id:000000,src:001018,time:478429,execs:450346,op:havoc,rep:16
fuzzing101_ex1/afl_crashes/default/queue/: id:000003,src:000000,time:2463,execs:2065,op:havoc,rep:4  id:000004,src:000000,time:2474,execs:2074,op:havoc,rep:4,+cov  id:000005,src:000000,time:2481,execs:2083,op:havoc,rep:16,+cov  id:000006,src:000000,time:2489,execs:2092,op:havoc,rep:8,+cov  id:000007,src:000000,time:2496,execs:2101,op:havoc,rep:2,+cov  id:000008,src:000000,time:2507,execs:2110,op:havoc,rep:2,+cov  id:000009,src:000000,time:2515,execs:2119,op:havoc,rep:2,+cov  id:000010,src:000000,time:2527,execs:2129,op:havoc,rep:8,+cov  id:000011,src:000000,time:2538,execs:2139,op:havoc,rep:8,+cov  id:000012,src:000000,time:2548,execs:2148,op:havoc,rep:2,+cov  id:000013,src:000000,time:2558,execs:2157,op:havoc,rep:4,+cov  (+2191 more)
fuzzing101_ex1/src/: main.rs
fuzzing101_ex1/xpdf-3.02/: Makefile  aconf.h  config.status
fuzzing101_ex1/xpdf-3.02/fofi/: Makefile
fuzzing101_ex1/xpdf-3.02/goo/: Makefile
fuzzing101_ex1/xpdf-3.02/splash/: Makefile
fuzzing101_ex1/xpdf-3.02/xpdf/: Makefile
(+7 files in other folders)
