[package]
name = "fuzzing101_ex1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
libafl = { path = "../../../tools/LibAFL/libafl"}
#libafl = "0.7.1"
clap = "3.1.0"